force-app/main/default/objects/Usuario_de_Portal__c/Usuario_de_Portal__c.object-meta.xml
<CustomObject>
    <label>Usuario de Portal</label>
    <nameField>
        <label>Nombres</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuarios de Portal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>