force-app/main/default/objects/Usuario_de_Portal__c/fields/Comercio_Afiliado__c.field-meta.xml
<CustomField>
    <fullName>Comercio_Afiliado__c</fullName>
    <label>Comercio Afiliado</label>
    <referenceTo>Comercio_Afiliado__c</referenceTo>
    <relationshipLabel>Usuarios de Portal</relationshipLabel>
    <relationshipName>Usuarios_de_Portal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>