force-app/main/default/objects/Usuario_de_Portal__c/fields/Contrase_a__c.field-meta.xml
<CustomField>
    <fullName>Contrase_a__c</fullName>
    <label>Contraseña</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>