force-app/main/default/objects/Usuario_de_Portal__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <length>254</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>