force-app/main/default/objects/Usuario_de_Portal__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Zona</valueSetName>
    </valueSet>
</CustomField>